style.css
header, section, footer, nav, article {
    display: block;
}
body {
    position:absolute;
    left: 30%;
    max-width: 35.5%;
    margin: auto;
    margin-top: 0.7%;
    padding-right: 0.5%;
    border: 3px solid #000000;
}
.wrap {
    max-width: 65%;
}
nav {
    margin: 2%;
}
#current {
    font-weight: bold;
    color: #BDBBBB;
}
a {
    color: black;
    text-decoration: none;
    font-weight: bold;
}
a:hover {
    color: #BDBBBB;
}
span.nav {
    padding-right: 2%;
    font-family: "Lucida Console", Monaco, monospace;
}
.authors, .conf {
    display: inline-block;
}
.conf {
    font-style: italic;
}
h2, p {
    padding-left: 2%;
}
#pic {
    border: black 2px solid;
    position: absolute;
    width: 30%;
    left: 69.5%;
    top: -0.5%;
}

